# python-project-lvl2

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pyci.yml
formatters/: __init__.py  formatters_choice.py  json_f.py  plain.py  stylish.py
gendiff/: __init__.py  cli.py  gen_difference.py  gendiff_dict.py  generate_diff.py  parse_data.py  read_data.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py  test_parse_data.py
tests/fixtures/: expected.txt  expected_json.txt
